Bug 146243 - FILEEDIT DOCX Accept of tracked table row insertion doesn't update the background of the table row immediately
Summary: FILEEDIT DOCX Accept of tracked table row insertion doesn't update the backgr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0.2
Keywords: filter:docx
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2021-12-15 14:26 UTC by NISZ LibreOffice Team
Modified: 2021-12-22 09:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem (4.51 KB, image/jpeg)
2021-12-15 14:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-12-15 14:26:15 UTC
Description:
Accepting a table insertion does not immediately remove the blue background colour, only the text change colour changes to black:

Steps to Reproduce:
1. Open attached file
2. Accept changes

Actual Results:
Blue background is there for while

Expected Results:
Blue background should be removed  immediately


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5242061cca5332ec15cce8c76f070d16e857445d
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-12-15 14:27:33 UTC
Created attachment 176950 [details]
Screenshot of the problem
Comment 2 László Németh 2021-12-21 14:34:34 UTC
Fixed in https://gerrit.libreoffice.org/c/core/+/127228:

tdf#146244 sw: fix Undo of accepting table row insertion

Fix Undo of accepting table row insertion to get back
the "false" value of HasTextChangesOnly property and the
associated light blue table row background.

This fixes also the missing update of the table row
background at accepting the table row insertion.

Follow-up to commit 8c028b7e41e3d350d0e67005b16faf0159cc5c12
"tdf#146244 sw: update HasTextChangesOnly in modified rows".
Comment 3 Commit Notification 2021-12-22 09:13:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/631649f233bda500c627719b9e43df3fe08df7c5

tdf#146243 sw: fix Undo of accepting table row insertion

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.